@@ -40,6 +40,8 @@ import org.jetel.data.primitive.Numeric;
 import org.jetel.exception.ComponentNotReadyException;
 import org.jetel.exception.ConfigurationProblem;
 import org.jetel.exception.ConfigurationStatus;
+import org.jetel.exception.ConfigurationStatus.Priority;
+import org.jetel.exception.ConfigurationStatus.Severity;
 import org.jetel.exception.JetelException;
 import org.jetel.exception.JetelRuntimeException;
 import org.jetel.exception.TransformException;
@@ -537,7 +539,7 @@ public class AproxMergeJoin extends Node implements MetadataProvider {
 				if (conformityFieldsForSuspicious.length>0){
 					for (int i=0;i<conformityFieldsForSuspicious.length;i++){
 						if (conformityFieldsForSuspicious[i]>-1){
-							outSuspicious.getField(conformityFieldsForSuspicious[i]).setValue(new Double(conformity[i]));
+							outSuspicious.getField(conformityFieldsForSuspicious[i]).setValue(Double.valueOf(conformity[i]));
 						}
 					}
 				}
@@ -560,7 +562,6 @@ public class AproxMergeJoin extends Node implements MetadataProvider {
 
 		for (int i = 0; i < count; i++) {
 			data[i] = DataRecordFactory.newRecord(metadata);
-			data[i].init();
 		}
 		return data;
 	}
@@ -609,13 +610,9 @@ public class AproxMergeJoin extends Node implements MetadataProvider {
 		// initialize output record
 		DataRecordMetadata outConformingMetadata = conformingPort.getMetadata();
 		DataRecord outConformingRecord = DataRecordFactory.newRecord(outConformingMetadata);
-		outConformingRecord.init();
-		outConformingRecord.reset();
 
 		DataRecordMetadata outSuspiciousMetadata = suspiciousPort.getMetadata();
 		DataRecord outSuspiciousRecord = DataRecordFactory.newRecord(outSuspiciousMetadata);
-		outSuspiciousRecord.init();
-		outSuspiciousRecord.reset();
 
 		// tmp record for switching contents
 		DataRecord tmpRec;
@@ -652,6 +649,8 @@ public class AproxMergeJoin extends Node implements MetadataProvider {
 					slaveRecords[TEMPORARY] = tmpRec;
 					isDriverDifferent = false;
 					break;
+				default:
+					throw new IllegalStateException();
 				}
 			}
 			flushCombinations(driverRecords[CURRENT], slaveRecords[TEMPORARY],
@@ -845,6 +844,7 @@ public class AproxMergeJoin extends Node implements MetadataProvider {
     	transformFactory.setTransformClass(transformClassName);
     	transformFactory.setTransformUrl(transformURL);
     	transformFactory.setCharset(charset);
+    	transformFactory.setAttributeName("Transform");
     	transformFactory.setComponent(this);
     	transformFactory.setInMetadata(getInMetadata());
     	transformFactory.setOutMetadata(getOutputPort(CONFORMING_OUT).getMetadata());
@@ -857,6 +857,7 @@ public class AproxMergeJoin extends Node implements MetadataProvider {
 		transformFactory.setTransformClass(transformClassNameForSuspicious);
 		transformFactory.setTransformUrl(transformURLForsuspicious);
 		transformFactory.setCharset(charset);
+		transformFactory.setAttributeName("Transform for suspicious");
 		transformFactory.setComponent(this);
 		transformFactory.setInMetadata(getInMetadata());
 		transformFactory.setOutMetadata(getOutputPort(SUSPICIOUS_OUT).getMetadata());
@@ -1045,12 +1046,10 @@ public class AproxMergeJoin extends Node implements MetadataProvider {
         }
         
 		if (getOutputPort(NOT_MATCH_DRIVER_OUT) != null) {
-			checkMetadata(status, getInputPort(DRIVER_ON_PORT).getMetadata(),
-					getOutputPort(NOT_MATCH_DRIVER_OUT).getMetadata());
+			checkMetadata(status, getInputPort(DRIVER_ON_PORT), getOutputPort(NOT_MATCH_DRIVER_OUT));
 		}		
 		if (getOutputPort(NOT_MATCH_SLAVE_OUT) != null) {
-			checkMetadata(status, getInputPort(SLAVE_ON_PORT).getMetadata(),
-					getOutputPort(NOT_MATCH_SLAVE_OUT).getMetadata());
+			checkMetadata(status, getInputPort(SLAVE_ON_PORT), getOutputPort(NOT_MATCH_SLAVE_OUT));
 		}		
 		try {
         	
@@ -1058,12 +1057,18 @@ public class AproxMergeJoin extends Node implements MetadataProvider {
     		inMetadata[0]=getInputPort(DRIVER_ON_PORT).getMetadata();
     		inMetadata[1]=getInputPort(SLAVE_ON_PORT).getMetadata();
     		// initializing join parameters
-    		AproximativeJoinKey[] keys;
-    		if (joinParameters[0].indexOf('=') != -1) {
-    			keys = initNewJoinKey(joinParameters);
-    		}else{
-    			keys = initOldJoinKey(joinParameters);
-    		}
+    		AproximativeJoinKey[] keys = null;
+			try {
+				if (joinParameters[0].indexOf('=') != -1) {
+					keys = initNewJoinKey(joinParameters);
+				} else {
+					keys = initOldJoinKey(joinParameters);
+				}
+			} catch (IndexOutOfBoundsException e) {
+				String joinKey = StringUtils.join(Arrays.asList(joinParameters), Defaults.Component.KEY_FIELDS_DELIMITER);
+				status.add("Invalid join key: " + joinKey, Severity.ERROR, this, Priority.NORMAL, XML_JOIN_KEY_ATTRIBUTE);
+				return status;
+			}
     		joinKeys = new String[joinParameters.length];
     		maxDifferenceLetters = new int[joinParameters.length];
     		boolean[][] strength=new boolean[joinParameters.length][StringAproxComparator.IDENTICAL];
